--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,15 +18,29 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/idRLHome"
-        android:visibility="visible">
+        android:id="@+id/idRLHome">
+
+        <FrameLayout
+            android:id="@+id/idFrame"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
 
         <ImageView
             android:id="@+id/IvBack"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@color/black_shade_1" />
+            android:src="@drawable/sprin" />
+
+        <ImageButton
+            android:id="@+id/Themes"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_baseline_image_24"
+            app:tint="@color/white" />
 
         <TextView
             android:id="@+id/idCityName"
@@ -195,11 +209,6 @@
                 android:layout_alignParentBottom="true"
                 android:orientation="horizontal"
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-
-            <com.google.android.gms.maps.MapView
-                android:id="@+id/mapView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
 
 
         </LinearLayout>
