--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,17 +20,13 @@
         android:layout_height="match_parent"
         android:id="@+id/idRLHome">
 
-        <FrameLayout
-            android:id="@+id/idFrame"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
         <ImageView
             android:id="@+id/IvBack"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/sprin" />
+            android:background="@color/black_shade_1"
+            />
 
         <ImageButton
             android:id="@+id/Themes"
@@ -71,6 +67,7 @@
                 android:layout_weight="4.5"
                 android:background="@android:color/transparent"
                 android:padding="5dp"
+                android:backgroundTint="@color/white"
                 android:textColorHint="@color/white"
                 app:hintTextColor="@color/white">
 
