--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,199 +15,211 @@
         android:layout_alignParentTop="true"
         android:visibility="gone"
         android:layout_alignParentEnd="true" />
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/idRLHome">
-
-        <ImageView
-            android:id="@+id/IvBack"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            android:background="@color/black_shade_1"
-            />
-
-        <ImageButton
-            android:id="@+id/Themes"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginHorizontal="10dp"
-            android:layout_marginTop="10dp"
-            android:background="@android:color/transparent"
-            android:src="@drawable/ic_baseline_image_24"
-            app:tint="@color/white" />
-
-        <TextView
-            android:id="@+id/idCityName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-            android:gravity="center"
-            android:padding="20dp"
-            android:text="City name"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="18sp" />
-
-        <LinearLayout
-            android:id="@+id/Linear1"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/idCityName"
-            android:orientation="horizontal"
-            android:weightSum="5"
-            tools:ignore="NotSibling">
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/idTILCity"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:layout_weight="4.5"
-                android:background="@android:color/transparent"
-                android:padding="5dp"
-                android:backgroundTint="@color/white"
-                android:textColorHint="@color/white"
-                app:hintTextColor="@color/white">
-
-                <AutoCompleteTextView
-                    android:id="@+id/idEdtCity"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="@android:color/transparent"
-                    android:importantForAutofill="no"
-                    android:textColorHint="@color/white"
-                    android:inputType="text"
-                    android:backgroundTint="@color/black_shade_1"
-                    android:singleLine="true"
-                    android:textColor="@color/white"
-                    android:textSize="20sp" />
-
-
-
-            </com.google.android.material.textfield.TextInputLayout>
-            <ImageButton
-                android:id="@+id/idTVSearch"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-
-                android:background="@android:color/transparent"
-                android:src="@drawable/ic_baseline_search_24"
-                app:tint="@color/white" />
-        </LinearLayout>
-
-        <TextView
-            android:id="@+id/idTVTemperture"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/Linear1"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center_horizontal"
-            android:padding="5dp"
-            android:textColor="@color/white"
-            android:textSize="70dp"
-            tools:ignore="NotSibling" />
-
-        <ImageView
-            android:id="@+id/idIVIcon"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_below="@id/idTVTemperture"
-            android:layout_centerHorizontal="true"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp" />
-
-        <TextView
-            android:id="@+id/idTVCondition"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/idIVIcon"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="10dp"
-            android:layout_marginBottom="10dp"
-            android:gravity="center"
-            android:textAlignment="center"
-            android:textColor="@color/white"
-            android:textSize="18sp"/>
-
-
-
-
-
-
-</RelativeLayout>
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:scrollbars="none"
-        android:layout_marginTop="490dp"
-        android:layout_marginHorizontal="10dp">
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+        android:layout_height="match_parent"
+        >
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/idRLHome">
+
+            <ImageView
+                android:id="@+id/IvBack"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="centerCrop"
+                android:background="@color/black_shade_1"
+                />
+
+            <ImageButton
+                android:id="@+id/Themes"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/ic_baseline_image_24"
+                app:tint="@color/white" />
+
             <TextView
+                android:id="@+id/idCityName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/day1"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:padding="20dp"
+                android:text="City name"
+                android:textAlignment="center"
                 android:textColor="@color/white"
-                android:textSize="18sp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/idRvWeather"
+                android:textSize="18sp" />
+
+            <LinearLayout
+                android:id="@+id/Linear1"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
+                android:layout_below="@id/idCityName"
                 android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/day2"
-                android:textColor="@color/white"
-                android:textSize="18sp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/idRvWeather1"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/day3"
-                android:textColor="@color/white"
-                android:textSize="18sp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/idRvWeather2"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/day4"
-                android:textColor="@color/white"
-                android:textSize="18sp"/>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/idRvWeather3"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:orientation="horizontal"
-                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                android:weightSum="5"
+                tools:ignore="NotSibling">
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/idTILCity"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:layout_weight="4.5"
+                    android:background="@android:color/transparent"
+                    android:padding="5dp"
+                    android:backgroundTint="@color/white"
+                    android:textColorHint="@color/white"
+                    app:hintTextColor="@color/white">
+
+                    <AutoCompleteTextView
+                        android:id="@+id/idEdtCity"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@android:color/transparent"
+                        android:importantForAutofill="no"
+                        android:textColorHint="@color/white"
+                        android:inputType="text"
+                        android:backgroundTint="@color/black_shade_1"
+                        android:singleLine="true"
+                        android:textColor="@color/white"
+                        android:textSize="20sp" />
 
 
-        </LinearLayout>
+
+                </com.google.android.material.textfield.TextInputLayout>
+                <ImageButton
+                    android:id="@+id/idTVSearch"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/ic_baseline_search_24"
+                    app:tint="@color/white" />
+            </LinearLayout>
+
+            <TextView
+                android:id="@+id/idTVTemperture"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/Linear1"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center_horizontal"
+                android:padding="5dp"
+                android:textColor="@color/white"
+                android:textSize="70dp"
+                tools:ignore="NotSibling" />
+
+            <ImageView
+                android:id="@+id/idIVIcon"
+                android:layout_width="150dp"
+                android:layout_height="150dp"
+                android:layout_below="@id/idTVTemperture"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp" />
+
+            <TextView
+                android:id="@+id/idTVCondition"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/idIVIcon"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="18sp"/>
+
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                android:layout_marginTop="490dp"
+                android:layout_marginHorizontal="10dp">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/day1"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/idRvWeather"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/day2"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/idRvWeather1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/day3"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/idRvWeather2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/day4"
+                        android:textColor="@color/white"
+                        android:textSize="18sp"/>
+                    <androidx.recyclerview.widget.RecyclerView
+                        android:id="@+id/idRvWeather3"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal"
+                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
+
+
+                </LinearLayout>
+            </ScrollView>
+
+
+
+
+        </RelativeLayout>
+
+
+
+
+
+
     </ScrollView>
+
+
 </RelativeLayout>
