--- a/app/src/main/res/layout/activity_themes.xml
+++ b/app/src/main/res/layout/activity_themes.xml
@@ -7,6 +7,16 @@
     android:background="@color/black_shade_1">
 
     <ImageButton
+        android:id="@+id/IB"
+        android:layout_width="100dp"
+        android:layout_height="200dp"
+        android:layout_toRightOf="@id/IB4"
+        android:layout_below="@+id/IB1"
+        android:background="@drawable/idk"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="10dp" />
+
+    <ImageButton
         android:id="@+id/IB1"
         android:layout_width="100dp"
         android:layout_height="200dp"
@@ -38,16 +48,18 @@
         android:layout_width="100dp"
         android:layout_height="200dp"
         android:layout_below="@+id/IB1"
+        android:background="@drawable/red"
         android:layout_marginHorizontal="15dp"
         android:layout_marginTop="10dp" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/Back"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
+        android:layout_width="50dp"
+        android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="670dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/ic_baseline_arrow_back_24" />
 
 
 </RelativeLayout>
