--- a/app/src/main/res/layout/activity_town_information.xml
+++ b/app/src/main/res/layout/activity_town_information.xml
@@ -28,6 +28,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:id="@+id/city_description"
                 android:layout_below="@+id/idTownImage"
                 android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
