--- a/app/src/main/res/layout/activity_town_information.xml
+++ b/app/src/main/res/layout/activity_town_information.xml
@@ -6,38 +6,38 @@
     android:layout_height="match_parent"
     tools:context=".Town_information"
     android:background="@color/black_shade_1">
+
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
+
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/black_shade_1">
+            android:background="@drawable/town2">
+
             <ImageView
+                android:id="@+id/idTownImage"
                 android:layout_width="300dp"
                 android:layout_height="300dp"
-                android:id="@+id/idTownImage"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="10dp"
-                android:background="@color/black_shade_1"/>
+                android:background="@color/black_shade_1" />
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/idTownImage"
+                android:layout_marginHorizontal="10dp"
                 android:layout_marginTop="20dp"
-                android:layout_marginHorizontal="10dp"/>
-
-
-
+                android:background="@color/black_shade_1" />
 
 
         </RelativeLayout>
 
 
-
     </ScrollView>
-
 
 
 </RelativeLayout>
