--- a/app/src/main/res/layout/activity_town_information.xml
+++ b/app/src/main/res/layout/activity_town_information.xml
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/town2">
+            android:background="@drawable/town">
 
             <ImageView
                 android:id="@+id/idTownImage"
@@ -29,7 +29,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/idTownImage"
-                android:layout_marginHorizontal="10dp"
+                android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="20dp"
                 android:background="@color/black_shade_1" />
 
