--- a/app/src/main/res/layout/activity_town_information.xml
+++ b/app/src/main/res/layout/activity_town_information.xml
@@ -6,30 +6,31 @@
     android:layout_height="match_parent"
     tools:context=".Town_information"
     android:background="@color/black_shade_1">
-        <RelativeLayout
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/town">
+
+        <ImageView
+            android:id="@+id/idTownImage"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:background="@color/black_shade_1" />
+
+        <TextView
+            android:id="@+id/city_description"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/town">
-
-            <ImageView
-                android:id="@+id/idTownImage"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:background="@color/black_shade_1" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/city_description"
-                android:textSize="25dp"
-                android:layout_below="@+id/idTownImage"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="20dp" />
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/idTownImage"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:textSize="20dp" />
 
 
-        </RelativeLayout>
+    </RelativeLayout>
 
 
 </RelativeLayout>
